# QIFS

./: CMakeLists.txt  README.md  ifscalccore.cpp  ifscalccore.h  ifsinput.cpp  ifsinput.h  ifsinput.ui  ifsrenderdialog.cpp  ifsrenderdialog.h  ifsrenderdialog.ui  ifsrenderingwidget.cpp  ifsrenderingwidget.h  main.cpp  transformfunction.cpp  transformfunction.h  transformfunctiondisplay.cpp  transformfunctiondisplay.h  transformfunctiondisplay.ui
